# Robocon-25_codes

./: .gitignore  README.md  test_d455.py
Detection/: simple_hoop_detector.py  test.py
ML Model/: annotate.py  extract.py  split.py  train.py
ML Model/dataset/: data.yaml
ML Model/labels/: frame_00360.txt  frame_00900.txt  frame_01410.txt
arduino_codes/Drive_with_auto/: Drive_with_auto.ino
arduino_codes/_shoot_with_auto/: _shoot_with_auto.ino
esp32_project_env/: pyvenv.cfg
esp32_project_env/Servo_codes/Arduino_Servo_test/: Arduino_Servo_test.ino
esp32_project_env/Servo_codes/Arduino_mega_Shoot-Controller/: Arduino_mega_Shoot-Controller.ino
esp32_project_env/Servo_codes/Arduino_mega_Shoot-Controller-bot2/: Arduino_mega_Shoot-Controller-bot2.ino
esp32_project_env/Servo_codes/Arduino_mega_Shoot-Controller_NEW_BOT/: Arduino_mega_Shoot-Controller_NEW_BOT.ino
esp32_project_env/Servo_codes/Shoot-Controller/: Shoot-Controller.ino
esp32_project_env/Servo_codes/esp_servo/: esp_servo.ino
esp32_project_env/arduino_codes/sketch_jun26b/: sketch_jun26b.ino
install/: local_setup.sh  setup.sh
install/joy_serial_bridge/share/joy_serial_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml
joy_py/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
joy_py/log/: latest_build
joy_serial_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
joy_serial_ws/log/: latest_build  latest_list
log/: latest_build
ros_depthCamera/install/: local_setup.sh  setup.sh
ros_depthCamera/log/: latest_build
(+97 files in other folders)
