<?xml version="1.0"?>
<package format="3">
  <name>joy_serial_bridge</name>
  <version>0.1.0</version>
  <description>Bridge /joy → serial for an ESP</description>
  <maintainer email="jayinaksha_2302cm08@iitp.ac.in">Jayinaksha</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>pyserial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>